--- a/src/components/Footer/styles.css
+++ b/src/components/Footer/styles.css
@@ -1,13 +1,13 @@
 footer {
   width: 100%;
   height: 60px;
-  background-color: #5a5a5a;
+  background-color: #fff;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .footer_p {
-  color: #fff;
+  color: #000;
   font-size: 14px;
 }
