--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 100px;
   display: flex;
-  background-color: #5a5a5a;
+  background-color: #fff;
   justify-content: space-evenly;
   align-items: center;
 }
@@ -15,7 +15,7 @@
 }
 
 .nav_item {
-  color: #fff;
+  color: #000;
   font-size: 16px;
   width: 100px;
   text-align: center;
@@ -24,7 +24,7 @@
 
 .nav_item:hover,
 .nav_item_selected {
-  border-bottom: 1px #fff solid;
+  border-bottom: 1px #000 solid;
   padding: 20px 0;
   cursor: pointer;
   font-size: 20px;
