--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,7 +5,7 @@
   padding: 0;
   list-style: none;
   text-decoration: none;
-  color: black;
+  color: #fff;
 }
 
 html,
@@ -17,6 +17,7 @@ body,
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-image: url("../assets/background.jpg");
 }
 
 body {
